# finance-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  analytics.sql  crontab  db.sh  docker-compose.yml  init.sh  pyproject.toml
finance-bot/: ,b  bot.py  config_data.py  database.py  handlers.py  middlewares.py  money_dump.py  notify.py  telegram_logger.py  vocabulary.py
