[tool.poetry]
name = "finance-bot"
version = "0.1.0"
description = "app for financial accounting via telegram bot api"
authors = ["luculliano <vederecento@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "finance_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
